--- a/src/clr/tests/src/JIT/HardwareIntrinsics/X86/Shared/ScalarBinOpTest.template
+++ b/src/clr/tests/src/JIT/HardwareIntrinsics/X86/Shared/ScalarBinOpTest.template
@@ -37,11 +37,17 @@ namespace JIT.HardwareIntrinsics.X86
                 // Validates passing a local works, using Unsafe.ReadUnaligned
                 test.RunLclVarScenario_UnsafeRead();
 
-                // Validates passing the field of a local works
-                test.RunLclFldScenario();
+                // Validates passing the field of a local class works
+                test.RunClassLclFldScenario();
 
-                // Validates passing an instance member works
-                test.RunFldScenario();
+                // Validates passing an instance member of a class works
+                test.RunClassFldScenario();
+
+                // Validates passing the field of a local struct works
+                test.RunStructLclFldScenario();
+
+                // Validates passing an instance member of a struct works
+                test.RunStructFldScenario();
             }
             else
             {
@@ -58,14 +64,37 @@ namespace JIT.HardwareIntrinsics.X86
 
     public sealed unsafe class ScalarBinaryOpTest__{Method}{RetBaseType}
     {
+        private struct TestStruct
+        {
+            public {Op1BaseType} _fld1;
+            public {Op2BaseType} _fld2;
+
+            public static TestStruct Create()
+            {
+                var testStruct = new TestStruct();
+                var random = new Random();
+
+                testStruct._fld1 = {NextValueOp1};
+                testStruct._fld2 = {NextValueOp2};
+
+                return testStruct;
+            }
+
+            public void RunStructFldScenario(ScalarBinaryOpTest__{Method}{RetBaseType} testClass)
+            {
+                var result = {Isa}.{Method}(_fld1, _fld2);
+                testClass.ValidateResult(_fld1, _fld2, result);
+            }
+        }
+
         private static {Op1BaseType} _data1;
-        private static {Op1BaseType} _data2;
+        private static {Op2BaseType} _data2;
 
         private static {Op1BaseType} _clsVar1;
-        private static {Op1BaseType} _clsVar2;
+        private static {Op2BaseType} _clsVar2;
 
         private {Op1BaseType} _fld1;
-        private {Op1BaseType} _fld2;
+        private {Op2BaseType} _fld2;
 
         static ScalarBinaryOpTest__{Method}{RetBaseType}()
         {
@@ -79,7 +108,7 @@ namespace JIT.HardwareIntrinsics.X86
             Succeeded = true;
 
             var random = new Random();
-            
+
             _fld1 = {NextValueOp1};
             _fld2 = {NextValueOp2};
 
@@ -131,7 +160,7 @@ namespace JIT.HardwareIntrinsics.X86
             ValidateResult(data1, data2, result);
         }
 
-        public void RunLclFldScenario()
+        public void RunClassLclFldScenario()
         {
             var test = new ScalarBinaryOpTest__{Method}{RetBaseType}();
             var result = {Isa}.{Method}(test._fld1, test._fld2);
@@ -139,10 +168,24 @@ namespace JIT.HardwareIntrinsics.X86
             ValidateResult(test._fld1, test._fld2, result);
         }
 
-        public void RunFldScenario()
+        public void RunClassFldScenario()
         {
             var result = {Isa}.{Method}(_fld1, _fld2);
             ValidateResult(_fld1, _fld2, result);
+        }
+
+        public void RunStructLclFldScenario()
+        {
+            var test = TestStruct.Create();
+            var result = {Isa}.{Method}(test._fld1, test._fld2);
+
+            ValidateResult(test._fld1, test._fld2, result);
+        }
+
+        public void RunStructFldScenario()
+        {
+            var test = TestStruct.Create();
+            test.RunStructFldScenario(this);
         }
 
         public void RunUnsupportedScenario()
