Disable manual COM registration logic on ARM32 (dotnet/coreclr#19042)
* Add advapi32.lib to the list of libs to link against on ARM.
Remove conditional build on ARM in source.

* Manually edit ARM and ARM64 test lists.

Commit migrated from https://github.com/dotnet/coreclr/commit/af0b442c17fe3a9a95370e506a36ce72ee99ea80

--- a/src/clr/tests/src/Interop/CMakeLists.txt
+++ b/src/clr/tests/src/Interop/CMakeLists.txt
@@ -3,6 +3,7 @@ if(WIN32)
     if(CLR_CMAKE_HOST_ARCH STREQUAL arm)
         list(APPEND LINK_LIBRARIES_ADDITIONAL
             ole32.lib
+            advapi32.lib
         )
     endif(CLR_CMAKE_HOST_ARCH STREQUAL arm)
 endif(WIN32)
