--- a/src/libraries/Common/tests/System/Xml/XmlCoreTest/XmlCoreTest.csproj
+++ b/src/libraries/Common/tests/System/Xml/XmlCoreTest/XmlCoreTest.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <ProjectGuid>{89701565-F68B-46D9-BD78-95B0F052C50B}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AssemblyName>XmlCoreTest</AssemblyName>
     <RootNamespace>XmlCoreTest.Common</RootNamespace>
     <Configurations>netstandard-Debug;netstandard-Release</Configurations>
