--- a/src/libraries/System.Globalization.Calendars/tests/CalendarTestWithConfigSwitch/System.Globalization.CalendarsWithConfigSwitch.Tests.csproj
+++ b/src/libraries/System.Globalization.Calendars/tests/CalendarTestWithConfigSwitch/System.Globalization.CalendarsWithConfigSwitch.Tests.csproj
@@ -14,11 +14,11 @@
     <SkipXunitRuntimeConfigCopying>true</SkipXunitRuntimeConfigCopying>
   </PropertyGroup>
   <ItemGroup>
-    <Content Condition="'$(UsingCoverageDedicatedRuntime)'!='true'" Include="xunit.console.netcore.runtimeconfig.json">
+    <Content Condition="'$(UsingCoverageDedicatedRuntime)'!='true'" Include="xunit.console.runtimeconfig.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <!-- If using coverage dedicated runtime the proper runtimeconfig needs to be ussed -->
-    <Content Condition="'$(UsingCoverageDedicatedRuntime)'=='true'" Include="coverage/xunit.console.netcore.runtimeconfig.json">
+    <Content Condition="'$(UsingCoverageDedicatedRuntime)'=='true'" Include="coverage/xunit.console.runtimeconfig.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
