--- a/src/libraries/external/test-runtime/Configurations.props
+++ b/src/libraries/external/test-runtime/Configurations.props
@@ -7,6 +7,7 @@
       netcoreappaot;
       netstandard;
       netfx;
+      netcoreapp;
     </BuildConfigurations>
   </PropertyGroup>
 </Project>
