Add root MSBuild targets for Interop managed test assets (dotnet/coreclr#19069)
Add root CMake file for Interop native test assets

Commit migrated from https://github.com/dotnet/coreclr/commit/40286fc32e89c9eeda8b97d74cf0fb887469298b

--- a/src/clr/tests/src/Interop/CMakeLists.txt
+++ b/src/clr/tests/src/Interop/CMakeLists.txt
@@ -8,6 +8,9 @@ if(WIN32)
     endif(CLR_CMAKE_HOST_ARCH STREQUAL arm)
 endif(WIN32)
 
+# Consumed by native test assets
+SET(CLR_INTEROP_TEST_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
+
 include_directories(common)
 add_subdirectory(NativeCallable)
 add_subdirectory(PrimitiveMarshalling/Bool)
