Make BaseIntermediateOutputPath project specific
Set BaseIntermediateOutputPath and IntermediateOutputPath accordingly in
proj/depprojs and add TargetFramework* props for various configurations.


Commit migrated from https://github.com/dotnet/corefx/commit/3d223d3c55e07c110b5ebb0bc7ecb225e168da15

--- a/src/libraries/shims/Directory.Build.props
+++ b/src/libraries/shims/Directory.Build.props
@@ -19,7 +19,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <IntermediateOutputPath>$(BaseIntermediateOutputPath)shims/$(TargetGroup)/</IntermediateOutputPath>
-    <GenFacadesOutputPath>$(BaseIntermediateOutputPath)shims/$(TargetGroup)/facades/</GenFacadesOutputPath>
+    <!-- shared folder for ApiCompat.proj and shims.proj -->
+    <GenFacadesOutputPath>$(RootIntermediateOutputPath)shims/$(TargetGroup)/</GenFacadesOutputPath>
   </PropertyGroup>
 </Project>
