--- a/src/libraries/System.Threading.Thread/tests/MTAMain/MTAMain.csproj
+++ b/src/libraries/System.Threading.Thread/tests/MTAMain/MTAMain.csproj
@@ -1,6 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
+    <!-- To be consistent between netfx and others we override the SDK behavior which defaults to .dll -->
+    <TargetExt>.exe</TargetExt>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <ProjectGuid>{06B19C7D-9EBE-420F-BD33-137DB18A1FEB}</ProjectGuid>
     <Configurations>netstandard-Debug;netstandard-Release</Configurations>
